# agentperm

./: .agent-permissions.jsonc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: adapters.md  architecture.md  cli.md  pattern-dsl.md  policy-reference.md  troubleshooting.md
examples/: global.agent-permissions.jsonc  starter.agent-permissions.jsonc
src/agentperm/: __init__.py
src/agentperms/: __init__.py
src/llm_agent_bridge/: __init__.py
tests/: test_adapters.py  test_cli.py  test_parser.py  test_policy.py
zellij-plugin/: Cargo.toml  README.md  example-config.kdl
zellij-plugin/src/: lib.rs
