[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-agent-bridge"
version = "0.1.0"
description = "Permission policy mediator for Claude Code, Codex, OpenCode, and Gemini CLI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Jackson Cooper", email = "jackson@jacksonc.com" }]
keywords = [
    "ai",
    "ai-agent",
    "ai-agents",
    "ai-tools",
    "agent",
    "agentic",
    "agentic-ai",
    "agentic-tools",
    "ai-coding-assistant",
    "anthropic",
    "tree-sitter",
    "tree-sitter-bash",
    "claude",
    "claude-code",
    "codex",
    "codex-cli",
    "coding-agent",
    "coding-assistant",
    "developer-tools",
    "gemini",
    "gemini-cli",
    "hooks",
    "llm",
    "llm-agent",
    "llm-tools",
    "mcp",
    "mediator",
    "opencode",
    "openai",
    "permissions",
    "policy",
    "policy-engine",
    "shell",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "pyjson5>=2.0,<3",
    "tomlkit>=0.13,<0.14",
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-bash>=0.25,<0.26",
]

[project.urls]
Homepage = "https://github.com/jacks0n/llm-agent-bridge"
Repository = "https://github.com/jacks0n/llm-agent-bridge"
Issues = "https://github.com/jacks0n/llm-agent-bridge/issues"

[project.scripts]
llm-agent-bridge = "llm_agent_bridge:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "basedpyright>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_agent_bridge"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
# tree-sitter-bash stubs are partial. We narrow at the parser boundary so domain
# code never sees Unknown.
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
