[package]
name = "agentperms-indicator"
version = "0.1.0"
edition = "2021"
description = "Per-pane bypass-permissions toggle/indicator for the agentperms permission mediator."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
zellij-tile = "0.44"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
